<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<!--底部导航栏-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_device"
        android:icon="@drawable/device"
        android:title="@string/menu_device" />
    <item
        android:id="@+id/nav_scene"
        android:icon="@drawable/set"
        android:title="@string/menu_scene" />
    <item
        android:id="@+id/nav_news"
        android:icon="@drawable/ic_menu_news"
        android:title="@string/menu_news" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_menu_person"
        android:title="@string/menu_profile" />

</menu>
